--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/black"
     android:gravity="center_vertical|center_horizontal"
     tools:context=".MainActivity">
 
@@ -16,7 +17,9 @@
         android:textSize="18sp"
         android:padding="8dp"
         android:gravity="end"
-        android:layout_marginBottom="16dp"/>
+        android:textColor="@color/white"
+        android:layout_marginBottom="16dp"
+        />
 
 
     <TextView
@@ -27,6 +30,7 @@
         android:textSize="24sp"
         android:padding="8dp"
         android:gravity="end"
+        android:textColor="@color/white"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
 
@@ -34,122 +38,146 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp"
         android:columnCount="4"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:padding="8dp">
 
 
         <Button
             android:id="@+id/buttonClear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="C"
             android:layout_weight="1"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="@color/colorGrisClaro"
+            android:text="C"
+            android:textColor="@color/black"
+            />
 
         <Button
             android:id="@+id/buttonDivide"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorGrisClaro"
             android:text="/"
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonMultiply"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorGrisClaro"
             android:text="*"
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonresta"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="-"
-            android:backgroundTint="@color/black"/>
+            android:backgroundTint="@color/colorNaranja"
+            android:text="-" android:textColor="@color/black" />
 
         <Button
             android:id="@+id/button7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="7" />
+            android:text="7"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="8" />
+            android:text="8"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="9" />
+            android:text="9"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonsuma"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorNaranja"
             android:text="+"
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="4" />
+            android:text="4"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="5" />
+            android:text="5"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="6" />
+            android:text="6"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/buttonDecimal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorNaranja"
             android:text="."
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="1" />
+            android:text="1"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="2" />
+            android:text="2"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
         <Button
             android:id="@+id/button3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="3" />
+            android:text="3"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
 
         <Button
@@ -157,7 +185,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="0" />
+            android:text="0"
+            android:backgroundTint="@color/colorGrisOscuro"
+            android:textColor="@color/black"/>
 
 
         <Button
@@ -165,8 +195,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:backgroundTint="@color/colorNaranja"
             android:text="="
-            android:backgroundTint="@color/black"/>
+            android:textColor="@color/black"/>
+
 
 
     </GridLayout>
