--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="colorGrisClaro">#CCCCCC</color>
+    <color name="colorGrisOscuro">#666666</color>
+    <color name="colorNaranja">#FFA500</color>
+
 </resources>
